--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
   "bugs": {
     "url": "https://github.com/julieores/burger/issues"
   },
+  "engines": {
+    "node": "8.12.0"
+  },
   "homepage": "https://github.com/julieores/burger#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
